--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,48 +1,81 @@
 body{
   background-color: black;
+}
 
+@font-face {
+font-family: 'Dancing Script', cursive;
+font-style: normal;
+font-weight: normal;
+src: url("https://fonts.googleapis.com/css?family=Dancing+Script&display=swap");
 }
 
 .emcabezado {
   color: white !important;
   padding: 3px 10px;
 	border-radius: 10px;
+  align-items: center;
 	background: -webkit-linear-gradient(right, #5b7989 , #5b7989);
 	background: -o-linear-gradient(right, #5b7989 , #5b7989);
 	background: -moz-linear-gradient(right, #5b7989 , #5b7989);
 	background: linear-gradient(to right, #5b7989 , #5b7989);
 }
 
+h1{
+  color: white !important;
+  text-align: left;
+  font-size: 40px;
+  font-family: letra1;
+}
+
+.emcabezado a{
+  color: white !important;
+}
+
+.menu {
+	text-align: right;
+  font-size: 20px;
+  color: white !important;
+
+}
+
 .img_principal{
+  overflow: hidden;
   padding: 5px 10px;
-  align-items: center;
-  margin:10px auto;
-	display:block;
+  padding: 5px 10px;
   background-color: #82c3a6;
   border: 2px solid #02010a;
+  white: 40%;
 }
 
 .img_secundaria{
+  overflow: hidden;
   padding: 5px 10px;
-  align-items: center;
-  margin:10px auto;
-	display:block;
   background-color: #d5c75f ;
   border: 1px solid ;
 }
 
 div #derecha{
   width: 40%;
-  float: left;
+  padding: 5px 10px;
+  float: right;
   background-color: #d5c75f ;
+
 }
 
 div #izquierda{
   width: 40%;
+  padding: 5px 10px;
   float: right;
   background-color: #d5c75f ;
 }
 
+.img_principal img{
+    margin: 10px auto;
+}
+
+.img_secundaria img{
+    margin: 10px auto;
+}
 
 div #contenido{
   margin:10px auto;
@@ -56,4 +89,54 @@ div #contenido{
 }
 @media screen and (min-width:900px) {
   /* resolucion menor a 900px movil */
+}
+
+.pagina_pie {
+list-style: none;
+overflow: hidden;
+padding: 5px 10px;
+border-radius: 10px;
+background-color: #C6d5c5 !important;
+}
+
+footer{
+clear: both;
+overflow: hidden;
+}
+
+footer>div:nth-child(2) {
+float: left;
+}
+
+
+.pagina_pie .title {
+padding-bottom: 5px;
+font-weight: bold;
+}
+
+li {
+display: list-item;
+text-align: -webkit-match-parent;
+}
+
+.pagina_pie ul {
+float: left;
+list-style: none;
+margin: 0px;
+padding-top: 15px;
+padding-left: 100px;
+text-align: left;
+}
+
+div #derecha img {
+  -webkit-transition: -webkit-transform .8s ease-in-out;
+          transition:         transform .8s ease-in-out;
+}
+div #derecha img:hover {
+  -webkit-transform: rotate(10deg);
+          transform: rotate(10deg);
+}
+
+div #izquierda img{
+  transform: translate(20px, 5px);
 }
