--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,6 +1,3 @@
-body{
-  background-color: black;
-}
 
 @font-face {
 font-family: 'Dancing Script', cursive;
@@ -9,7 +6,25 @@ font-weight: normal;
 src: url("https://fonts.googleapis.com/css?family=Dancing+Script&display=swap");
 }
 
-.emcabezado {
+body {
+  background-color: black;
+}
+
+div #contenido{
+margin:10px auto;
+max-width: 900px;
+background-color: #82c3a6;
+}
+
+h1{
+  color: white !important;
+  text-align: left;
+  font-size: 40px;
+  font-family: letra1;
+}
+
+.header {
+  text-align: center;
   color: white !important;
   padding: 3px 10px;
 	border-radius: 10px;
@@ -20,14 +35,7 @@ src: url("https://fonts.googleapis.com/css?family=Dancing+Script&display=swap");
 	background: linear-gradient(to right, #5b7989 , #5b7989);
 }
 
-h1{
-  color: white !important;
-  text-align: left;
-  font-size: 40px;
-  font-family: letra1;
-}
-
-.emcabezado a{
+.header a{
   color: white !important;
 }
 
@@ -35,84 +43,188 @@ h1{
 	text-align: right;
   font-size: 20px;
   color: white !important;
-
 }
 
-.img_principal{
-  overflow: hidden;
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+.column {
+  flex: 50%;
+  max-width: 100%;
+  padding: 0 4px;
+}
+
+.col2 {
+  flex: 40%;
+  max-width: 40%;
+  float: left;
+  margin:0 4px;
+}
+.col3 {
+  flex: 40%;
+  max-width: 40%;
+  float: left;
+  margin:0 4px;
+}
+.colmg1{
+  flex: 40%;
+  max-width: 40%;
+  float: center;
+  margin:0 4px;
+}
+
+div #imgprincipal{
+  text-align:center;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+}
+
+@media screen and (max-width: 900px) {
+  .column {
+    flex: 50%;
+    max-width: 100%;
+    background-color: red ;
+  }
+  .col2  {
+    -webkit-transition: -webkit-transform .8s ease-in-out;
+    transition:         transform .8s ease-in-out;
+    transition: width 2s;
+  }
+  .col2 :hover {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+
+  .col3 {
+    transform: translate(20px, 5px);
+  }
+
+  .menu{
+    transform: translate(-40px, -50px);
+  }
+
+  #imgsegundaria .col2{
+    -webkit-transition: -webkit-transform .8s ease-in-out;
+    transition:         transform .8s ease-in-out;
+    transition: width 2s;
+  }
+
+  #imgsegundaria  .col2:hover{
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+
+  #imgsegundaria .col3{
+    transform: translate(20px, 5px);
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .column {
+    flex: 50%;
+    max-width: 100%;
+    background-color: black ;
+  }
+  .colmg1 {
+    flex: 100%;
+    max-width: 100%;
+  }
+  .col2 {
+    flex: 100%;
+    max-width: 100%;
+  }
+  .col3 {
+    max-width: 100%;
+    flex: 100%;
+  }
+  .pie_pagina {
+  list-style: none;
   padding: 5px 10px;
+  border-radius: 10px;
+  background-color: #C6d5c5 !important;
+  }
+
+  footer{
+  clear: both;
+  overflow: hidden;
+  }
+
+  footer>div:nth-child(2) {
+  float: left;
+  }
+
+  .pagina_pie .title {
+  padding-bottom: 5px;
+  font-weight: bold;
+  }
+
+  li {
+  display: list-item;
+  text-align: -webkit-match-parent;
+  }
+
+  .pagina_pie ul {
+  float: left;
+  list-style: none;
+  margin: 0px;
+  padding-top: 15px;
+  padding-left: 100px;
+  text-align: left;
+  }
+
+  div #imgprincipal{
   padding: 5px 10px;
   background-color: #82c3a6;
   border: 2px solid #02010a;
-  white: 40%;
-}
-
-.img_secundaria{
-  overflow: hidden;
-  padding: 5px 10px;
-  background-color: #d5c75f ;
-  border: 1px solid ;
-}
-
-div #derecha{
-  width: 40%;
-  padding: 5px 10px;
-  float: right;
-  background-color: #d5c75f ;
-
-}
-
-div #izquierda{
-  width: 40%;
-  padding: 5px 10px;
-  float: right;
-  background-color: #d5c75f ;
-}
-
-.img_principal img{
-    margin: 10px auto;
-}
-
-.img_secundaria img{
-    margin: 10px auto;
-}
-
-div #contenido{
-  margin:10px auto;
-  max-width: 900px;
-  background-color: #82c3a6;
-}
-
-@media screen and (max-width:900px) {
-  /* resolucion mayor a 900px destokp */
-  .img_secundaria img {
-    flex: 100% !important;
-    max-width: 100% !important;
-    margin-top: 8px;
-    vertical-align: middle;
+  float: center;
   }
-  #div derecha{
-    flex: 100% !important;
-    max-width: 100% !important;
-    margin-top: 8px;
-    vertical-align: middle;
+  div #imgsegundaria{
+  padding: 5px 10px;
+  background-color: #d5c75f  !important;
+  /*border: 1px solid #d5c75f;*/
   }
-  #div izquierda{
-    flex: 100% !important;
-    max-width: 100% !important;
-    margin-top: 8px;
-    vertical-align: middle;
+  .col2  {
+    -webkit-transition: -webkit-transform .8s ease-in-out;
+    transition:         transform .8s ease-in-out;
+    transition: width 2s;
+  }
+  .col2 :hover {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+
+  .col3 {
+    transform: translate(20px, 5px);
+  }
+
+  .menu{
+    transform: translate(-40px, -50px);
+  }
+
+  #imgsegundaria .col2{
+    -webkit-transition: -webkit-transform .8s ease-in-out;
+    transition:         transform .8s ease-in-out;
+    transition: width 2s;
+  }
+
+  #imgsegundaria  .col2:hover{
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+
+  #imgsegundaria .col3{
+    transform: translate(20px, 5px);
   }
 }
 
-@media screen and (min-width:900px) {
-  /* resolucion menor a 900px movil */
-
-}
-
-.pagina_pie {
+.pie_pagina {
 list-style: none;
-overflow: hidden;
 padding: 5px 10px;
 border-radius: 10px;
 background-color: #C6d5c5 !important;
@@ -126,7 +238,6 @@ overflow: hidden;
 footer>div:nth-child(2) {
 float: left;
 }
-
 
 .pagina_pie .title {
 padding-bottom: 5px;
@@ -147,19 +258,47 @@ padding-left: 100px;
 text-align: left;
 }
 
-div #derecha img {
-  -webkit-transition: -webkit-transform .8s ease-in-out;
-          transition:         transform .8s ease-in-out;
+div #imgprincipal{
+padding: 5px 10px;
+background-color: #82c3a6;
+border: 2px solid #02010a;
+float: center;
 }
-div #derecha img:hover {
+div #imgsegundaria{
+padding: 5px 10px;
+background-color: #d5c75f  !important;
+border: 1px solid ;
+}
+
+.col2  {
+  -webkit-transition: -webkit-transform .8s ease-in-out;
+  transition:         transform .8s ease-in-out;
+  transition: width 2s;
+}
+.col2 :hover {
   -webkit-transform: rotate(10deg);
           transform: rotate(10deg);
 }
 
-div #izquierda img{
+.col3 {
   transform: translate(20px, 5px);
 }
 
 .menu{
   transform: translate(-40px, -50px);
+}
+
+#imgsegundaria .col2{
+  -webkit-transition: -webkit-transform .8s ease-in-out;
+  transition:         transform .8s ease-in-out;
+  transition: width 2s;
+}
+
+#imgsegundaria  .col2:hover{
+  -webkit-transform: rotate(10deg);
+          transform: rotate(10deg);
+}
+
+#imgsegundaria .col3{
+  transform: translate(20px, 5px);
 }
