--- a/estilos/style.css
+++ b/estilos/style.css
@@ -131,17 +131,21 @@ div #imgprincipal{
     max-width: 100%;
     background-color: black ;
   }
+  p{
+    text-align: center;
+    color: white !important;
+  }
   .colmg1 {
     flex: 100%;
-    max-width: 100%;
+    max-width: 90%;
   }
   .col2 {
     flex: 100%;
-    max-width: 100%;
+    max-width: 90%;
   }
   .col3 {
-    max-width: 100%;
     flex: 100%;
+    max-width: 90%;
   }
   .pie_pagina {
   list-style: none;
@@ -186,8 +190,8 @@ div #imgprincipal{
   }
   div #imgsegundaria{
   padding: 5px 10px;
+  border: 2px solid #d5c75f;
   background-color: #d5c75f  !important;
-  /*border: 1px solid #d5c75f;*/
   }
   .col2  {
     -webkit-transition: -webkit-transform .8s ease-in-out;
@@ -199,9 +203,9 @@ div #imgprincipal{
             transform: rotate(10deg);
   }
 
-  .col3 {
+  /*.col3 {
     transform: translate(20px, 5px);
-  }
+  }*/
 
   .menu{
     transform: translate(-40px, -50px);
@@ -217,10 +221,10 @@ div #imgprincipal{
     -webkit-transform: rotate(10deg);
             transform: rotate(10deg);
   }
-
+/*
   #imgsegundaria .col3{
     transform: translate(20px, 5px);
-  }
+  }*/
 }
 
 .pie_pagina {
@@ -279,10 +283,10 @@ border: 1px solid ;
   -webkit-transform: rotate(10deg);
           transform: rotate(10deg);
 }
-
+/*
 .col3 {
   transform: translate(20px, 5px);
-}
+}*/
 
 .menu{
   transform: translate(-40px, -50px);
@@ -298,7 +302,12 @@ border: 1px solid ;
   -webkit-transform: rotate(10deg);
           transform: rotate(10deg);
 }
-
+/*
 #imgsegundaria .col3{
   transform: translate(20px, 5px);
+}*/
+
+p{
+  text-align: right;
+  color: white !important;
 }
